--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <title>Peripleo LaNC</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <script src='https://unpkg.com/maplibre-gl@2.1.1/dist/maplibre-gl.js'></script>
-    <link href='https://unpkg.com/maplibre-gl@2.1.1/dist/maplibre-gl.css' rel='stylesheet' />
+    <!-- meta name="peripleo:config" content="peripleo.config.leifuss.json" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
