--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Peripleo LaNC</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!-- meta name="peripleo:config" content="peripleo.config.leifuss.json" -->
+    <meta name="peripleo:config" content="peripleo.config.json">
     <link href='https://unpkg.com/maplibre-gl@2.1.1/dist/maplibre-gl.css' rel='stylesheet' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
