Added social preview image

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="peripleo:config" content="peripleo.config.json">
+    <meta name="description" content="Peripleo LaNC" />
+    <!-- Twitter card metadata -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@britishlibrary" />
+    <meta name="twitter:title" content="Peripleo | Locating a National Collection" />
+    <meta name="twitter:description" content="A prototype viewer for geo-located collection data." />
+
     <link href='https://unpkg.com/maplibre-gl@2.1.1/dist/maplibre-gl.css' rel='stylesheet' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
