Fullscreen mode when inside iframe

--- a/public/embedded.html
+++ b/public/embedded.html
@@ -24,7 +24,7 @@
 
     <p>This demo page shows how you can use Peripleo in embedded mode</p>
 
-    <iframe id="peripleo-embed" src="index.html"></iframe>
+    <iframe id="peripleo-embed" allow="fullscreen" src="index.html"></iframe>
 
     <footer>
       A footer...
