Minimal 'when' formatting

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Peripleo LaNC</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="peripleo:config" content="peripleo.config.json">
+    <meta name="peripleo:config" content="peripleo.config.leifuss.json">
     <meta name="description" content="Peripleo LaNC. A prototype viewer for geo-located collection data." />
     <!-- Twitter card metadata -->
     <meta name="twitter:card" content="summary_large_image" />
