Updated social preview image + OG metadata

--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="peripleo:config" content="peripleo.config.json">
-    <meta name="description" content="Peripleo LaNC. A prototype viewer for geo-located collection data." />
+    <meta name="description" content="A prototype viewer for geo-located collection data. This project is a Foundation project within the AHRC-funded 'Towards a National Collection' Programme" />
     <!-- Twitter card metadata -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@britishlibrary" />
     <meta name="twitter:title" content="Peripleo | Locating a National Collection" />
-    <meta name="twitter:description" content="A prototype viewer for geo-located collection data." />
-    <meta name="twitter:image" content="https://github.com/britishlibrary/peripleo-lanc/raw/main/public/peripleo-social-preview.png" />
+    <meta name="twitter:description" content="A prototype viewer for geo-located collection data. This project is a Foundation project within the AHRC-funded 'Towards a National Collection' Programme" />
+    <meta name="twitter:image" content="https://github.com/britishlibrary/peripleo-lanc/raw/main/public/peripleo-social-preview-bl-lanc.png" />
     <!-- OG metadata -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Peripleo | Locating a National Collection" />
-    <meta property="og:description" content="A prototype viewer for geo-located collection data." />
-    <meta property="og:image" content="https://github.com/britishlibrary/peripleo-lanc/raw/main/public/peripleo-social-preview.png" />
+    <meta property="og:description" content="A prototype viewer for geo-located collection data. This project is a Foundation project within the AHRC-funded 'Towards a National Collection' Programme" />
+    <meta property="og:image" content="https://github.com/britishlibrary/peripleo-lanc/raw/main/public/peripleo-social-preview-bl-lanc.png" />
     <meta property="og:image:width" content="1000" />
     <meta property="og:image:height" content="500" />
     <meta property="og:url" content="https://britishlibrary.github.io/peripleo-lanc/" />
